tests/cases/typecheck/enums/discriminants/too_many_variants.hash
// run=fail, stage=typecheck

#[repr("u8")]
Variants := enum(
    ALiTq0,
    AmXCHA,
    AMsWTh,
    AiiN2p,
    AiaFXS,
    AYkBt1,
    A2YWqr,
    ALE0d3,
    A0CDKq,
    Amckag,
    AtISXN,
    AzDjpr,
    AL5SEp,
    AWddLO,
    AMuQPT,
    An6Hui,
    A6gY5g,
    AN7sMo,
    Avx4hP,
    AloXfx,
    Aq4SLw,
    A0UjCw,
    AP76LF,
    AUKeRP,
    A8xHB2,
    ASzkFf,
    ARgIHB,
    Ab659I,
    ATsx1i,
    A9p9V6,
    AsQdfi,
    AChWxj,
    AL2jLd,
    ACY29s,
    AGzxfg,
    AN8loN,
    ArhUcE,
    A0UA9G,
    AdWaxY,
    AK8Zms,
    AC0KXM,
    ArYFAX,
    AuX1P2,
    Aj4eFo,
    AQ7873,
    AgZt74,
    ABO1w4,
    A6PIvQ,
    A4cZ3t,
    AmEmtm,
    A9OiYO,
    Ax8WVA,
    A757Bt,
    ApQerJ,
    AcHTQr,
    A21emP,
    AxMt1D,
    Ag40yV,
    AqDNsS,
    Adl2gm,
    Ap8SRJ,
    ASgcdN,
    A9ktN6,
    AdYWPh,
    Amdhtj,
    ALQrX6,
    Anjjbc,
    AOu0Ej,
    AAReLx,
    ADGEsf,
    ATrIux,
    AfDJWa,
    AHNCoH,
    A1J19r,
    AWncv4,
    A6XjkN,
    AQKiuv,
    AzcCfa,
    Areyfo,
    A2iDCP,
    AByhop,
    AwfdGi,
    A61K4e,
    AjLipm,
    AllaEV,
    AAozOg,
    ArN7TI,
    AXFTHN,
    AdKOcV,
    Az4nHh,
    Abdj7v,
    AWcWtN,
    AkoCAe,
    A68y3O,
    A7OqM9,
    AS9nK1,
    Auv3o8,
    AwXPQN,
    A5RrsO,
    A2OZhF,
    ARuyXp,
    A1prYH,
    A9OHoy,
    AeNC5S,
    A7ubzM,
    AOvNgS,
    Ag6s4O,
    A1t0Cu,
    A6VCI7,
    AZa1Gc,
    ApL7hG,
    A6dlTG,
    AO35g9,
    AoRp3u,
    AgSuDQ,
    AlOhcZ,
    AwWKi3,
    A2FznO,
    AaY6xr,
    AT6ma6,
    AhzY0e,
    AciCUl,
    AzAkmu,
    AfLBju,
    AaVnGz,
    AM1OV8,
    AZgLC2,
    A3HNbh,
    Aqu76s,
    ApC3jK,
    A8xH9e,
    ADMPZN,
    AR6vQa,
    AXTzbs,
    A3KNjx,
    AHnaJj,
    ADI9nP,
    A02b4n,
    AFZBae,
    ATFALj,
    A011EE,
    A5oM9q,
    ATS44K,
    Ajf1bK,
    AaTgQv,
    AiLzbb,
    A24IIR,
    AtdzS9,
    AWDvxl,
    Anu8au,
    AXKNuw,
    AJya28,
    A65oqX,
    AxWxg9,
    A9Di2p,
    AU2LJo,
    A7owwJ,
    AUZAw2,
    AWuP9F,
    ATzli4,
    AruA0c,
    AszEei,
    AtNBUc,
    AQt5KZ,
    Ao9g7H,
    AByuA5,
    AFwsQs,
    AGiDkl,
    AERbkJ,
    AB8eK8,
    AfnT6P,
    AJC6oe,
    AXT7D8,
    A8OAVl,
    A2m24k,
    AzVDfS,
    ABkCtU,
    A34ZNu,
    Awp0IU,
    AoZOIA,
    Aje3Fl,
    A03ObU,
    AVUoWQ,
    A8gxQO,
    AjpgYq,
    ANrvwb,
    ALKxHc,
    AliDei,
    AP9QpU,
    AVslPR,
    AEJ2Nl,
    A8bfm2,
    AIxY5t,
    AY6Bjd,
    AgBoXZ,
    Ak8XIt,
    ASshdQ,
    Au34y7,
    AwD8p6,
    A03TwN,
    AsQZ2C,
    ABJn04,
    A5sFQn,
    AUi4XB,
    AdKoCm,
    AWRL8f,
    AhZo9k,
    AFjuJw,
    Abzjwo,
    A6uDAS,
    AXJx11,
    Aje3x4,
    AsoAw7,
    ALtBDv,
    AqDgmh,
    AKS6eA,
    AR28bx,
    A1LzdB,
    A99NQd,
    A6wlT6,
    ABDfQm,
    APZIM1,
    APN2rs,
    AmZN5w,
    AEQdU6,
    AylGAU,
    A2tl8q,
    ABjH5C,
    AygtVM,
    ArHdTv,
    A1J2yg,
    ATaMGI,
    Abdoyv,
    A4t8Yq,
    AWFvfa,
    AHpAOs,
    AijWCU,
    Ak0n0y,
    AsLCuZ,
    AGYTZP,
    AJ1rCw,
    A8t6hV,
    AFgrwY,
    AT3GaD,
    AgMKZd,
    AXKzhp,
    AhbIaY,
    ACZUED,
    AkdZCW,
    AFabRI,
    A9jI4C,
    AJGVFX,
    A7QYTC,
    AucX7Y,
    Ai6X7A,
    ABX7A,
    B // ~ERROR: discriminant overflowed
)
